Fixed Marge errors

--- a/Ebers.uproject
+++ b/Ebers.uproject
@@ -36,15 +36,6 @@
 			"Enabled": true
 		},
 		{
-			"Name": "OculusVR",
-			"Enabled": false,
-			"SupportedTargetPlatforms": [
-				"Win32",
-				"Win64",
-				"Android"
-			]
-		},
-		{
 			"Name": "OpenXRHandTracking",
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
@@ -78,15 +69,12 @@
 			]
 		},
 		{
-			"Name": "MixedRealityCaptureFramework",
-			"Enabled": true
-		},
-		{
-			"Name": "WindowsMixedReality",
+			"Name": "OculusOpenXR",
 			"Enabled": true,
 			"SupportedTargetPlatforms": [
+				"Win32",
 				"Win64",
-				"HoloLens"
+				"Android"
 			]
 		}
 	],
