Revert "Fixed Marge errors"
This reverts commit 462ba4eae47ea30b19d0b0b29f81ab77bd428927.

--- a/Ebers.uproject
+++ b/Ebers.uproject
@@ -36,6 +36,15 @@
 			"Enabled": true
 		},
 		{
+			"Name": "OculusVR",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win32",
+				"Win64",
+				"Android"
+			]
+		},
+		{
 			"Name": "OpenXRHandTracking",
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
@@ -69,12 +78,15 @@
 			]
 		},
 		{
-			"Name": "OculusOpenXR",
+			"Name": "MixedRealityCaptureFramework",
+			"Enabled": true
+		},
+		{
+			"Name": "WindowsMixedReality",
 			"Enabled": true,
 			"SupportedTargetPlatforms": [
-				"Win32",
 				"Win64",
-				"Android"
+				"HoloLens"
 			]
 		}
 	],
