--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -123,7 +123,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/DanceScene.DanceScene
+EditorStartupMap=/Game/Levels/MusicScene.MusicScene
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -132,7 +132,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levels/DanceScene.DanceScene
+GameDefaultMap=/Game/Levels/MusicScene.MusicScene
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
