--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
+EditorStartupMap=/Game/MainEnvironent/Map/MainEnvironment.MainEnvironment
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/MainEnvironent/Map/MainEnvironment.MainEnvironment
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
